<?xml version="1.0"?>
<package>
  <name>iiwa</name>
  <version>1.4.0</version>
  <description>Collection of ROS packages for the KUKA LBR IIWA</description>
  <author email="salvo.virga@tum.de">Salvo Virga</author>
  <maintainer email="salvo.virga@tum.de">Salvo Virga</maintainer>
  
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>iiwa_control</run_depend>
  <run_depend>iiwa_description</run_depend>
  <run_depend>iiwa_gazebo</run_depend>
  <run_depend>iiwa_hw</run_depend>
  <run_depend>iiwa_launch</run_depend>
  <run_depend>iiwa_moveit</run_depend>
  <run_depend>iiwa_msgs</run_depend>
  <run_depend>iiwa_ros</run_depend>
  
  <export>
    <metapackage/>
  </export>
  
</package>
