<?xml version="1.0"?>
<package>
  <name>iiwa_control</name>
  <version>1.4.0</version>
  <description>The iiwa_control package</description>

  <maintainer email="salvo.virga@tum.de">Salvo Virga</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>controller_manager</run_depend>

  <export>
  </export>

</package>
