<?xml version="1.0"?>
<package format="2">
  <name>iiwa_control</name>
  <version>1.4.0</version>
  <description>A package containing controllers used by MoveIt! and Gazebo</description>
  <author email="salvo.virga@tum.de">Salvo Virga</author>
  <maintainer email="salvo.virga@tum.de">Salvo Virga</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_manager</depend>

</package>
