<?xml version="1.0"?>
<package>
  <name>iiwa_description</name>
  <version>1.4.0</version>
  <description>The robot_description package</description>

  <maintainer email="salvo.virga@tum.de">Salvo Virga</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
