<?xml version="1.0"?>
<package>
  <name>iiwa_description</name>
  <version>1.4.0</version>
  <description>This package contains the URDF of the KUKA LBR IIWA robot</description>
  <author email="salvo.virga@tum.de">Salvo Virga</author>
  <maintainer email="salvo.virga@tum.de">Salvo Virga</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
