<?xml version="1.0"?>
<package format="2">
  <name>iiwa_description</name>
  <version>1.4.0</version>
  <description>This package contains the URDF of the KUKA LBR IIWA robot</description>
  <author email="salvo.virga@tum.de">Salvo Virga</author>
  <maintainer email="salvo.virga@tum.de">Salvo Virga</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>force_torque_sensor_controller</depend>

</package>
