<?xml version="1.0"?>
<package>
  <name>iiwa_gazebo</name>
  <version>1.4.0</version>
  <description>The iiwa_gazebo package</description>

  <maintainer email="salvo.virga@tum.de">Salvo Virga</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>iiwa_description</run_depend>
  <run_depend>gazebo_ros</run_depend> 

  <export>
  </export>
</package>
