<?xml version="1.0"?>
<package format="2">
  <name>iiwa_gazebo</name>
  <version>1.4.0</version>
  <description>This package allows to load a KUKA LBR IIWA robot onto Gazebo</description>
  <author email="salvo.virga@tum.de">Salvo Virga</author>
  <maintainer email="salvo.virga@tum.de">Salvo Virga</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>iiwa_description</depend>
  <depend>gazebo_ros</depend>

</package>
