<?xml version="1.0"?>
<package>
  <name>iiwa_hw</name>
  <version>1.4.0</version>
  <description>The hardware interface to an KUKA LBR IIWA Robot</description>
  <author email="salvo.virga@tum.de">Salvo Virga</author>
  <maintainer email="salvo.virga@tum.de">Salvo Virga</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>combined_robot_hw</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>iiwa_msgs</build_depend>
  <build_depend>iiwa_ros</build_depend>
  <build_depend>pluginlib</build_depend>

  <run_depend>combined_robot_hw</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>iiwa_msgs</run_depend>
  <run_depend>iiwa_ros</run_depend>
  <run_depend>pluginlib</run_depend>

  <export>
    <hardware_interface plugin="${prefix}/robot_hw_plugin.xml"/>
  </export>
</package>
