<?xml version="1.0"?>
<package format="2">
  <name>iiwa_hw</name>
  <version>1.4.0</version>
  <description>The hardware interface to an KUKA LBR IIWA Robot</description>
  <author email="salvo.virga@tum.de">Salvo Virga</author>
  <maintainer email="salvo.virga@tum.de">Salvo Virga</maintainer>
 
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>pluginlib</depend>
  <depend>controller_manager</depend>
  <depend>controller_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>hardware_interface</depend>
  <depend>control_toolbox</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>iiwa_msgs</depend>
  <depend>iiwa_ros</depend>

  <export>
    <hardware_interface plugin="${prefix}/iiwa_hw_plugin.xml"/>
  </export>
</package>
