<?xml version="1.0"?>
<package>
  <name>iiwa_launch</name>
  <version>1.2.0</version>
  <description>The iiwa_control package</description>

  <maintainer email="salvo.virga@tum.de">Salvo Virga</maintainer>

  <license>BSD</license>

  <author email="robert.krug@oru.se">Robert Krug</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>iiwa_gazebo</run_depend>
  <run_depend>iiwa_control</run_depend>
  <run_depend>controller_manager</run_depend>

  <export>
  </export>

</package>
