<package>

  <name>iiwa_moveit</name>
  <version>1.2.0</version>
  <description>
     A package with all the configuration and launch files for using the iiwa Robot with the MoveIt Motion Planning Framework
  </description>
  <author email="salvo.virga@tum.de">Salvo Virga</author>
  <maintainer email="salvo.virga@tum.de">Salvo Virga</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org/</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit_setup_assistant/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit_setup_assistant</url>

  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>moveit_planners_ompl</run_depend>
  <run_depend>moveit_ros_visualization</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>xacro</run_depend>
  <build_depend>iiwa_description</build_depend>
  <run_depend>iiwa_description</run_depend>


  <buildtool_depend>catkin</buildtool_depend>
  
</package>
