<package>

  <name>iiwa_moveit</name>
  <version>1.4.0</version>
  <description>
	  A package with all the configuration and launch files for using the KUKA LBR IIWA with the MoveIt Motion Planning Framework
  </description>
  <author email="salvo.virga@tum.de">Salvo Virga</author>
  <maintainer email="salvo.virga@tum.de">Salvo Virga</maintainer>

  <license>BSD</license>

  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>moveit_setup_assistant</run_depend>
  <run_depend>moveit_planners_ompl</run_depend>
  <run_depend>moveit_fake_controller_manager</run_depend>
  <run_depend>moveit_simple_controller_manager</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>position_controllers</run_depend>
  <run_depend>velocity_controllers</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_ros_warehouse</run_depend>
  <run_depend>moveit_ros_visualization</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>iiwa_description</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
  
</package>
