<?xml version="1.0"?>
<package format="2">
<name>iiwa_msgs</name>
  <version>2.3.1</version>
  <description>ROS Messages to communicate with a KUKA LBR IIWA Robot</description>
  <author email="salvo.virga@tum.de">Salvo Virga</author>
  <maintainer email="salvo.virga@tum.de">Salvo Virga</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
</package>
