<?xml version="1.0"?>
<package>
  <name>iiwa_ros</name>
  <version>1.4.0</version>
  <description>The iiwa_ros package</description>
  
  <maintainer email="salvo.virga@tum.de">virga</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>iiwa_msgs</build_depend>
  <run_depend>iiwa_msgs</run_depend>
  
  <export>
    
  </export>
</package>