<?xml version="1.0"?>
<package format="2">
  <name>iiwa_ros</name>
  <version>1.4.0</version>
  <description>The iiwa_ros package</description>
  <author email="salvo.virga@tum.de">Salvo Virga</author>
  <maintainer email="salvo.virga@tum.de">Salvo Virga</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>iiwa_msgs</depend>
  
</package>
