<?xml version="1.0"?>
<package format="2">
  <name>iiwa_tool_msgs</name>
  <version>0.0.0</version>
  <description>The iiwa_tool_msgs package</description>

  <maintainer email="arne@todo.todo">arne</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
