<?xml version="1.0"?>
<package>
  <name>lbr_iiwa_hw</name>
  <version>2.0.0</version>
  <description>The hardware interface to an KUKA LBR IIWA Robot</description>
  
  <maintainer email="salvo.virga@tum.de">Salvo Virga</maintainer>
  
  
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>controller_interface</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend> roscpp </build_depend>
  <build_depend>iiwa_msgs</build_depend>
  <build_depend>lbr_iiwa_ros</build_depend>

  <run_depend>controller_interface</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>realtime_tools</run_depend>  
  <run_depend>iiwa_msgs</run_depend>
  <run_depend>lbr_iiwa_ros</run_depend>
  
  <export>    
  </export>
</package>
