<?xml version="1.0"?>
<package>
  <name>lbr_iiwa_ros</name>
  <version>1.0.0</version>
  <description>The lbr_iiwa_ros package</description>
  
  <maintainer email="salvo.virga@tum.de">virga</maintainer>
  
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>IIWA</build_depend>
  <run_depend>IIWA</run_depend>
  
  <export>
    
  </export>
</package>